--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
